# nanoshell

./: Cargo.toml  README.md
nanoshell/: Cargo.toml  build.rs  pubspec.yaml
nanoshell/lib/: accelerators.dart  nanoshell.dart
nanoshell/lib/src/: accelerator.dart  constants.dart  key_interceptor.dart  menu.dart  menu_bar.dart  menu_internal.dart  mutex.dart  struts.dart  window.dart  window_manager.dart  window_widget.dart
nanoshell/src/: error.rs
nanoshell/src/codec/: mod.rs
nanoshell/src/shell/: constants.rs  menu_manager.rs  mod.rs  structs.rs  window.rs  window_manager.rs
nanoshell/src/shell/platform/: key_interceptor.rs  mod.rs
nanoshell/src/shell/platform/macos/: binary_messenger.rs  drag_context.rs  drag_data.rs  engine.rs  error.rs  key_event.rs  menu.rs  mod.rs  run_loop.rs  utils.rs  window.rs
nanoshell/src/shell/platform/null/: menu.rs  mod.rs  window.rs
nanoshell/src/shell/platform/win32/: display.rs  dpi.rs  drag_com.rs  drag_context.rs  drag_data.rs  drag_util.rs  dxgi_hook.rs  engine.rs  error.rs  flutter_api.rs  init.rs  key_event.rs  menu.rs  mod.rs  run_loop.rs  util.rs  window.rs  window_adapter.rs  window_base.rs  window_menu.rs
nanoshell/src/util/: capsule.rs
nanoshell_build/: Cargo.toml
nanoshell_demo/: Cargo.toml  build.rs  pubspec.yaml
nanoshell_demo/lib/: drag_drop.dart  file_open_dialog.dart  home.dart  main.dart  menu_bar_window.dart  modal.dart  popup_menu.dart
nanoshell_demo/src/: file_open_dialog.rs  main.rs
