[package]
name = "nanoshell_demo"
version = "0.1.0"
authors = ["Matej Knopp <matej.knopp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cargo-emit = "0.1"
nanoshell_build = { path = "../nanoshell_build" }

[dependencies]
nanoshell = { path = "../nanoshell" }
env_logger = "0.8.3"
serde = { version = "1.0.119", features = ["derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"
objc = "0.2.7"
block = "0.1.6"